--- a/ncrypt.Server/Pages/Index.razor
+++ b/ncrypt.Server/Pages/Index.razor
@@ -18,8 +18,8 @@
                 <RadzenCard class="p-2 h-100">
                     <RadzenDataList WrapItems="true" Data="@models" TItem="Type">
                         <Template Context="model">
-                            <Draggable Data="@model">
-                                <RadzenCard class="my-1 m-0 px-4 py-1 plain-card">
+                            <Draggable Data="@model" Class="mx-1" Style="width:45%">
+                                <RadzenCard class="m-0 mb-1 px-0 py-1 plain-card">
                                     <p style="text-align:center;font-size:20px; font-family:'Century Gothic'">@(model.Name.Replace ("Service", ""))</p>
                                 </RadzenCard>
                             </Draggable>
@@ -29,10 +29,16 @@
             </div>
             <div class="col-8 h-100">
                 <RadzenCard class="w-100 p-0 h-100">
-                    <div class="row m-2 justify-content-center">
-                        <RadzenButton class="m-1" Click=@OnDeleteClick Text="Delete" Icon="delete" ButtonStyle="ButtonStyle.Danger" Style="width:60%; border-radius:10px" />
+                    <div class="row mx-2 mt-1">
+                        <div class="col df-jc-ac p-1 m-1">
+                            <RadzenButton class="my-1 h-100 rounded-pill w-100" Click=@OnDeleteClick Text="Delete" Icon="delete" ButtonStyle="ButtonStyle.Danger" />
+                        </div>
+                        <div class="col df-jc-ac p-1 m-1">
+                            <RadzenButton class="my-1 h-100 rounded-pill w-100" Click=@OnDo Text="DO" Icon="check" ButtonStyle="ButtonStyle.Success" />
+                        </div>
                     </div>
-                    <div class="row m-2 h-100" Style="overflow:auto">
+                    <hr class="mx-2 my-1" />
+                    <div class="row m-2 mt-2 h-100" Style="overflow:auto">
                         <DropTarget T="Type" Drop="@OnDrop">
                             <ul style="list-style:none;padding:0">
                                 @foreach (var model in sequence)
@@ -44,17 +50,16 @@
                             </ul>
                         </DropTarget>
                     </div>
-                    <div class="row m-2 justify-content-center">
-                        <RadzenButton class="m-1" Click=@OnDo Text="DO" Icon="check" ButtonStyle="ButtonStyle.Success" Style="width:60%; border-radius:10px" />
-                    </div>
                 </RadzenCard>
             </div>
         </div>
         <div class="col-6">
-            <div class="row h-50 pb-1">
+            <div class="row h-50 pb-1 text-container">
+                <RadzenDropDown class="rounded-pill convert-type-dd" Style="" TValue="NL.ConvertType" Data=Enum.GetValues(typeof(NL.ConvertType)) @bind-Value=@InputConvertType />
                 <RadzenTextArea class="w-100 p-2 text-area" Placeholder="Enter here..." @oninput=@OnInputChange />
             </div>
-            <div class="row h-50 pb-1">
+            <div class="row h-50 pb-1 text-container">
+                <RadzenDropDown class="rounded-pill convert-type-dd" TValue="NL.ConvertType" Data=Enum.GetValues(typeof(NL.ConvertType)) @bind-Value=@OutputConvertType />
                 <RadzenTextArea class="w-100 p-2 text-area" Disabled=true @bind-Value=@Output />
             </div>
         </div>
@@ -63,16 +68,30 @@
 
 <style>
     .plain-card {
-        background-color: #C4DDFF;
-        border: solid 1px #C4DDFF;
-        border-radius: 10px;
         width: 100%;
+
+        background-color: #479cc8;
+        color: white;
+
+        border: solid 1px #479cc8;
+        border-radius: 7px;
     }
 
         .plain-card:hover {
-            box-shadow: 0.7px 0.7px #7FB5FF;
             border: solid 1px #001D6E;
         }
+
+    .text-container {
+        position: relative;
+    }
+
+    .convert-type-dd {
+        width: 10%;
+        border: solid 0.1px #1A3651;
+        position: absolute;
+        right: 10px;
+        top: 10px
+    }
 
     .text-area {
         resize: none;
@@ -84,8 +103,29 @@
 
 @code {
     String Input { get; set; } = String.Empty;
-
     String Output { get; set; } = String.Empty;
+
+    private NL.ConvertType _inputConvertType;
+    NL.ConvertType InputConvertType 
+    {
+        get => _inputConvertType;
+        set
+        {
+            _inputConvertType = value;
+            OnDo ();
+        }
+    }
+
+    private NL.ConvertType _outputConvertType;
+    NL.ConvertType OutputConvertType 
+    {
+        get => _outputConvertType;
+        set
+        {
+            _outputConvertType = value;
+            OnDo ();
+        }
+    }
 
     List<Type> models = new ();
     List<GenericModel> sequence = new ();
@@ -120,7 +160,7 @@
     void OnDo ()
     {
         StringBuilder errors = new ();
-        String result = Input;
+        String result = NL.Converter.ToHex (Input, InputConvertType);
         foreach (var model in sequence)
         {
             Type serviceType = model.ServiceType;
@@ -133,7 +173,7 @@
                 try
                 {
                     if (parameter.Name!.Equals ("input"))
-                        methodParams.Add (NL.Converter.ToHex (result, model.InputConvertType));
+                        methodParams.Add (result);
                     else
                         methodParams.Add (model.Result[parameter.Name]);
                 }
@@ -169,10 +209,10 @@
 
             var instance = Activator.CreateInstance (serviceType, constructorParams.ToArray ());
 
-            var retValue = (String) method.Invoke (instance, methodParams.ToArray ())!;
-            result = Converter.FromHex (retValue, model.OutputConvertType);
+            result = (String) method.Invoke (instance, methodParams.ToArray ())!;
         }
 
+        result = Converter.FromHex (result, OutputConvertType);
         Output = errors.ToString ().Equals (String.Empty) ? result : errors.ToString ();
     }
 }
