--- a/ncrypt.Server/Shared/_GenericCard.razor
+++ b/ncrypt.Server/Shared/_GenericCard.razor
@@ -12,23 +12,10 @@
                 <div class="col-9 d-flex justify-content-around align-items-center">
                     <RadzenSelectBar TValue="String" @bind-Value=@Model.SelectedMethod Data=@Model.ServiceMethodNames />
                 </div>
-            </div>
-            <hr class="my-2" />
-            <div class="row">
-                <div class="d-flex justify-content-start align-items-center my-1">
-                    <div class="col-6 d-flex justify-content-center align-items-center">
-                        <h5 class="mb-0 me-1">Input:</h5>
-                        <RadzenDropDown TValue="NL.ConvertType" Data=Enum.GetValues(typeof(NL.ConvertType)) @bind-Value=@Model.InputConvertType />
-                    </div>
-                    <div class="col-6 d-flex justify-content-center align-items-center">
-                        <h5 class="mb-0 me-1">Output:</h5>
-                        <RadzenDropDown TValue="NL.ConvertType" Data=Enum.GetValues(typeof(NL.ConvertType)) @bind-Value=@Model.OutputConvertType />
-                    </div>                    
-                </div>
-            </div>
+            </div>      
             @if (Model.ConstructorParameters.Count () > 0)
             {
-                <hr class="my-2" />
+                <hr class="mt-2 mb-2" />
                 <div class="row">
                     @foreach (var prop in Model.ConstructorParameters)
                     {
@@ -41,7 +28,7 @@
             }
             @if (Model.GetParametersOfMethod (Model.SelectedMethod).Count () > 0)
             {
-                <hr class="my-2" />
+                <hr class="mt-0 mb-2" />
                 <div class="row">
                     @foreach (var prop in Model.GetParametersOfMethod (Model.SelectedMethod))
                     {
