--- a/ncrypt.Server/Shared/MainLayout.razor
+++ b/ncrypt.Server/Shared/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+@inject NavigationManager Navigation
 
 <PageTitle>ncrypt.Server</PageTitle>
 
@@ -7,6 +8,17 @@
 
     <main>
         <div class="top-row px-4" style="height:4vh">
+            @if (ShowProgress is true)
+            {
+                <RadzenProgressBar Style="width:13%"
+                               ShowValue="false" Mode="ProgressBarMode.Indeterminate" ProgressBarStyle="ProgressBarStyle.Secondary" Value="100">
+                </RadzenProgressBar>
+            }
+            <RadzenUpload Url="upload" ChooseText="Upload Service as .dll" Icon="upload"
+                          Visible=@(!ShowProgress) Complete=@OnComplete Progress=@TrackProgress>
+            </RadzenUpload>
+
+
             <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
         </div>
 
@@ -15,3 +27,25 @@
         </div>
     </main>
 </div>
+
+<style>
+    .rz-fileupload-buttonbar {
+        padding: 0;
+        background: none;
+    }
+</style>
+
+@code {
+    public Boolean ShowProgress { get; set; } = false;
+
+    void OnComplete()
+    {
+        ShowProgress = false;
+        Navigation.NavigateTo("/", true);
+    }
+
+    void TrackProgress(UploadProgressArgs args)
+    {
+        ShowProgress = true;
+    }
+}
